Upgrade to Java 25 on Iteration 2